feat: fds 이상탐지 분석 비즈니스 코드 추가
- Kafka Consumer Module 내 consumerGroupId 추가
- Money 객체를 Amount 클래스로 wrap ( 통화정보를 받기 위함 )
- 기존, transfer-relay server 를 yml 의 instanceId 를 받아 mod 연산을 수행하여 파티셔닝 개념을 적용하도록 개선 ( phase-1 )